--- a/client/components/JumpingDots/JumpingDots.scss
+++ b/client/components/JumpingDots/JumpingDots.scss
@@ -12,7 +12,7 @@
   height: 2px;
   border-radius: 50%;
   margin-right: 3px;
-  background: #303131;
+  background: var(--color-jumping-dots);
   animation: dots-wave 1s linear infinite;
 
   &:nth-child(2) {
